# CMakeConanGitTutorial

./: .gitignore  README.md
CppAppDemo/: CMakeLists.txt  conanfile.txt  main.cpp
CppLibDemo/: CMakeLists.txt  LibDemoConfig.cmake.in  conanfile.py  libdemo.cpp
